--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
